# sequence-manager

./: .gitignore  Cargo.toml  dprint.json
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: cache.rs  lib.rs
phytozome/: Cargo.toml
taxonomy/: Cargo.toml
taxonomy/migrations/: 20230216073715_taxonomy.down.sql  20230216073715_taxonomy.up.sql
taxonomy/src/: lib.rs  sql.rs
