[workspace]
members = [
    "taxonomy",
    "onekp",
    "phytozome",
    "common",
    "cli",
]

[workspace.dependencies]
serde = { version = "~1.0", features = ["derive"] }
anyhow = "~1.0"
reqwest = { version = "0.11.14" }
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
flate2 = "~1.0"